syntax = "proto3";
package api;

import "google/protobuf/annotations.proto";
//import "google/api/annotations.proto";

message PingMessage {
  string greeting = 1;
}

message NoParam {}

service Ping {
  //  rpc SayHello(PingMessage) returns (PingMessage) {
  rpc SayHello(NoParam) returns (PingMessage) {
    option (google.api.http) = {
        get: "/pingapi"
    };
  }
}
